# animated-text

./: .gitignore  Cargo.toml  LICENSE  README.md  project.bri
browser/client/: client.js  index.html
browser/extension/: content.js  manifest.json  popup.html  popup.js  style.css
drafts/: demo.txt
src/: convert.rs  main.rs  model.rs  remote.rs  tui.rs
src/lib/: mod.rs  model.rs  tui.rs
src/model/: mod.rs  ttml.rs
src/tui/: app.rs  drafts.rs  edit_keyframe.rs  edit_line.rs  edit_text.rs  mod.rs  types.rs
