[package]
name = "animated-text"
version = "0.1.0"
edition = "2024"
authors = ["@nz366"]

[dependencies]
crossterm = "0.29.0"
lyrics_helper_core = "0.2.0"
ratatui = "0.30.0"
ttml_processor = "0.2.0"
tokio = { version = "1.0", features = ["full"] }
axum = { version = "0.7.5", features = ["ws"] }
tower-http = { version = "0.5.2", features = ["fs"] }
futures-util = "0.3"
arboard = "3.6.1"
tui-textarea = "0.7.0"
ratatui-crossterm = "0.1.0"
ratatui-core = "0.1.0"
ratatui-widgets = "0.3.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
